# master-course

./: README.md
DynamicSystemsModelling/: Lab5.nb  Lab6.py  Lab7.py  Прокопенко_МИОСС_6.ipynb  Прокопенко_МИОСС_7.ipynb  Прокопенко_МИОСС_8.ipynb
Linux/: link_to_seminar_tasks.txt  trans.sh
Linux/Seminar1/: Task3-6.txt
Linux/Seminar2/: Tasks_s2.txt
Linux/Seminar3/: Tasks_s3.txt
Linux/Seminar4/: Tasks_s4.txt
Linux/Seminar5/: Tasks_s5.txt  archive.sh
MPI/: lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp
MultidimensionalAnalysis/Lab/: AR_model.py  Prarapenka_Lab1.ipynb
NeuralNetworks/Lab1/: Task1.txt  Task3-5.ipynb
NeuralNetworks/Lab2/: Task2.ipynb  Task2.txt
NeuralNetworks/Lab3/: Task3.ipynb  Task3.txt
NeuralNetworks/Lab4/: Task4.txt
QtModelling/: Упражнения (ВГГМ).docx
QtModelling/_ApproxCubicBSplines/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  (+1 more)
QtModelling/_OutputBeam/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtModelling/_PointsInRectangleGridMethod/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
R/: Task_1_3.r  Task_2.r  Task_4.r  Task_5.r  Лабораторная работа R.docx
SpecialDataStructures/: CW_archive.cpp  CW_array_games.cpp  CW_megainversions.cpp  CW_stars.cpp  Check_Eiler.cpp  Eiler.cpp  KingKog.cpp  Knapsack.cpp  Lab1.cpp  PersistentSegmentTree.cpp  ShortestPath.cpp
TextAlgorithms/: back_bwt.py  bwt.py  coin.py  dna.cpp  fast_fourier_transform.cpp  prefix_cyclic_shift.cpp  prefix_period.cpp  shift-and.cpp  suffix_array_construction.cpp  suffix_tree_growing_names.cpp  three_substrings.cpp  z_distinct.cpp
(+136 files in other folders)
